<?xml version="1.0" encoding="utf-8"?><!-- activity_available_rooms.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:console="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Appbar having back button and showing title of page -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- Back button -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back" />

        <!-- Page title -->
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/available_rooms"
            android:textColor="#ffffff"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/noRoomMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="280sp"
        android:text="@string/no_rooms_available"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:visibility="gone"
        />

    <!-- RecyclerView for Room Items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roomList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar"
            android:layout_marginHorizontal="12sp" />

</RelativeLayout>
